<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="right|top">



    <!--
                    -In questa sezione sono stati inseiriti elementi di tipo EditText anzichè di tipo Textview,  ciò che li differisce è l'attributo
                     "android:inputType" che permette al sistema di fornire un appropriato metodo di input. Per esempio, se l'inputType è una password
                     numerica, il sistema offre un tastierino numerico come metodo di input, se l'inputType è un nome, il sistema offre la tastiera completa.

                    -La proprità "textCapSentences" nell'attributo "android:inputType" setta automaticamente la prima lettere in maiuscolo.

                    -Il metodo android:imeOptions="actionNext" permette di avere una tastiera con un tasto di default "Next" per i campi intermedi e
                     il metodo android:imeOptions="actionDone" permette di avere una tastiera con un tasto di default "Done" per l'ultimo campo

                -->

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="76dp"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:onClick="o"
        android:background="@android:drawable/divider_horizontal_dark"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/imagebutton" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="1.5"
        android:contentDescription="@string/photo"
        app:srcCompat="@drawable/ic_user1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/full_name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name_txv"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <EditText
            android:id="@+id/editTextFullName"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:gravity="center|start"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textPersonName"
            android:text="@string/full_name"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/nickname_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname_txv"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <EditText
            android:id="@+id/editTextNickName"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:gravity="center|start"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/nickname"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address_txv"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:clickable="true"
            android:gravity="center|start"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/posta_addr_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postal_address_txv"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <EditText
            android:id="@+id/editTextPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center|start"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="0.5"
        android:text="@string/save_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#FFFFFF" />


</LinearLayout>

