<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="50dp"
        app:srcCompat="@drawable/ic_user1"
        android:contentDescription="@string/photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/FullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/full_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#89000000" />

        <TextView
            android:id="@+id/Nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/nickname"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#89000000" />

        <TextView
            android:id="@+id/EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#89000000" />

        <TextView
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#89000000" />
    </LinearLayout>
</LinearLayout>